--- a/src/app/component/loginComponent/login.component.html
+++ b/src/app/component/loginComponent/login.component.html
@@ -8,7 +8,7 @@
     @if (!this.isLoginFailed) {
 
     <div class="login-invalid">
-      <p>SITE IS IN PREVIEW; JUST HIT LOGIN!</p>
+      <p>SITE IS IN BETA; CREATE ACCOUNT!</p>
     </div>
 
     }
