--- a/src/app/component/footerComponent/footer.component.html
+++ b/src/app/component/footerComponent/footer.component.html
@@ -1,25 +1,26 @@
 <div class="footer-container">
-  <div class="footer-table">
-    <div class="footer-table-cell" (click)="this.onAboutPopUp()">
-      <p class="footer-table-text">About</p>
+
+  <div class="footer-card">
+    <div class="footer-cell" (click)="this.onAboutPopUp()">
+      <p class="footer-text">About</p>
     </div>
-    <div class="footer-table-cell" (click)="this.onToSPopUp()">
-      <p class="footer-table-text">Terms of Service</p>
+    <div class="footer-cell" (click)="this.onToSPopUp()">
+      <p class="footer-text">Terms of Service</p>
     </div>
-    <div class="footer-table-cell" (click)="this.onPrivacyPopUp()">
-      <p class="footer-table-text">Privacy</p>
+    <div class="footer-cell" (click)="this.onPrivacyPopUp()">
+      <p class="footer-text">Privacy</p>
     </div>
-    <div class="footer-table-cell" (click)="this.onLegalPopUp()">
-      <p class="footer-table-text">Legal</p>
+    <div class="footer-cell" (click)="this.onLegalPopUp()">
+      <p class="footer-text">Legal</p>
     </div>
-    <div class="footer-table-cell">
-      <p class="footer-table-text-copyright">©2025 All Rights Reserved</p>
+    <div class="footer-cell">
+      <p class="footer-text-copyright">©2025 All Rights Reserved</p>
     </div>
   </div>
 
   @if(isAboutPopUp){<app-component-about (notify)="onClose($event)"></app-component-about>}
   @if(isToSPopUp){<app-component-tos (notify)="onClose($event)"></app-component-tos>}
   @if(isPrivacyPopUp){<app-component-privacy (notify)="onClose($event)"></app-component-privacy>}
-  @if(isLegalPopUp){<app-component-legal (notify)="onClose($event)"></app-component-legal>} 
-  
+  @if(isLegalPopUp){<app-component-legal (notify)="onClose($event)"></app-component-legal>}
+
 </div>
