--- a/src/app/component/footerComponent/footer.component.scss
+++ b/src/app/component/footerComponent/footer.component.scss
@@ -22,7 +22,8 @@
 }
 
 .footer-table-cell {
-  flex: 1;
+  flex: 1 1 0;
+  text-align: center;
   background-color: transparent;
   border-color: transparent;
 }
