--- a/src/app/component/footerComponent/footer.component.scss
+++ b/src/app/component/footerComponent/footer.component.scss
@@ -24,6 +24,7 @@
 .footer-table-cell {
   flex: 1 1 0;
   text-align: center;
+  border: 3px solid black;
   background-color: transparent;
   border-color: transparent;
 }
