--- a/src/app/component/featuredComponent/featured.component.scss
+++ b/src/app/component/featuredComponent/featured.component.scss
@@ -78,7 +78,7 @@
 
 .card-img {
   flex: 0 0 40%;
-  background-image: url('/RedDragon.webp');
+  background-image: url('/camera.webp');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
