--- a/src/app/component/headerComponent/header.component.html
+++ b/src/app/component/headerComponent/header.component.html
@@ -1,7 +1,7 @@
 <div class="header-container">
-  
+
   <div class="header-banner">
-    <img class="header-banner-img" src="RedDragonSocietyBanner.webp" />
+    <img class="header-banner-img" src="YourSiteBanner.webp" />
   </div>
 
   <div class="header-title"></div>
