--- a/src/app/component/headlinesComponent/headlines.component.scss
+++ b/src/app/component/headlinesComponent/headlines.component.scss
@@ -84,7 +84,7 @@
 
 .card-img {
   flex: 0 0 auto;
-  background-image: url('/RedDragon.webp');
+  background-image: url('/camera.webp');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
