--- a/src/app/component/headerComponent/header.component.html
+++ b/src/app/component/headerComponent/header.component.html
@@ -33,7 +33,7 @@
 
     <div class="header-navigation" (click)="onNavigate003()">
       <mat-icon class="header-navigation-ico">shopping_cart</mat-icon>
-      <p class="header-navigation-text">H.o.R.D.</p>
+      <p class="header-navigation-text">Shop</p>
     </div>
 
     }
